# rpn-calculator-case-study

./: README.md
c/: .clang-format  .gitignore  Makefile  stm32f40_41xxx.mk
c/inc/: io.h  rpn_calculator.h
c/src/: io.c  main.c  rpn_calculator.c
rs/: .dir-locals.el  Cargo.toml  run.gdb
rs/.cargo/: config
rs/src/: main.rs  rpn_calculator.rs
