[package]
name = "rpn-calculator"
authors = [ "Camden Dixie O'Brien <cobrien@witekio.com>" ]
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
nb = "1.0.0"

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = [ "stm32f407" ]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
